test/files/neg/t8610-arg.check
t8610-arg.scala:10: warning: side-effecting nullary methods are discouraged: suggest defining as `def u()` instead
  def u: Unit = ()      // unitarian universalist
      ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
